<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="280dp"
        android:layout_height="250dp"
        android:alpha="0.4"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokebola"
        app:tint="@color/pokebola_gray" />

    <ImageView
        android:id="@+id/imgPokemonLogo"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokemon_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPokemonLogo"
        >

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_rounded_edit_text"
            android:hint="@string/user_email"
            android:paddingHorizontal="15dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/user_password"
            android:background="@drawable/background_rounded_edit_text"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start_session"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/background_rounded_edit_text"
        android:textAllCaps="false"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="#f0f0f0"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register_me"
        android:textColor="@android:color/holo_blue_light"
        android:background="@drawable/background_rounded_edit_text"
        android:textAllCaps="false"
        android:layout_margin="24dp"
        app:backgroundTint="#f0f0f0"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
